@@ -45,6 +45,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			pageTracker._trackPageview();
 		</script>
 		{# Google Analytics JS Code End #}
+		{# jQuery Tooltip Start #}
+		<link rel="stylesheet" href="/media/js/jquery-tooltip/jquery.tooltip.css">
+		<script type="text/javascript" src="/media/js/jquery-tooltip/jquery.tooltip.pack.js"></script>
+		{# jQuery Tooltip End #}
 		<title>{% block title %}{{ mainpage.title }} | {{ mainpage.subtitle }}{% endblock %}</title>
 	</head>
 	<body>
